--- a/style.css
+++ b/style.css
@@ -82,17 +82,7 @@ top: 100px;
   background-color: #3f51b5;
   margin: 100px auto 68.57px auto;
 }
-#japan a{
-  padding: 17px 20px;
-  background-color: red;
-  border-radius: 12px;
-  font-size: 30px;
-  font-weight: bold;
-  color: #fff;
-  position: relative;
-  top: 430px;
-  left: -475px;
-}
+
 #foreign h2{
   color: #333333;
   font-size: 5.0em;
@@ -112,17 +102,7 @@ top: 100px;
     background-color: #3f51b5;
     margin: 100px auto 68.57px auto;
   }
-  #foreign a{
-    padding: 17px 20px;
-    background-color: red;
-    border-radius: 12px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #fff;
-    position: relative;
-    top: 430px;
-    left: -475px;
-  }
+ 
   #footer{
     position: relative;
     top: 250px;
@@ -181,5 +161,51 @@ top: 100px;
   margin: auto;
   text-align: center;
 }
-
+.container {
+  font-family: "Yu Gothic", YuGothic, Verdana, 'Hiragino Kaku Gothic ProN','Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', 'メイリオ', Meiryo, sans-serif;
+  text-align: center;
+  padding-top: 40px;
+}
+.btn-open {
+  display: inline-block;
+  width: 250px;
+  height:60px;
+  text-align: center;
+  background-color: #9ec34b;
+  font-size: 25px;
+  line-height: 52px;
+  color: #FFF;
+  text-decoration: none;
+  font-weight: bold;
+  border: 2px solid #9ec34b;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  top: 430PX;
+  left: -500PX;
+}
+.btn-open:after{
+  width: 100%;
+  height: 0;
+  content:"";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background : #FFF;
+  opacity: 0;
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transition: .2s;
+  z-index: -1;
+}
+.btn-open:hover{
+  color: #9ec34b;
+}
+.btn-open:hover:after{
+  height: 240%;
+  opacity: 1;
+}
+.btn-open:active:after{
+  height: 340%;
+  opacity: 1;
+}
 
