--- a/style.css
+++ b/style.css
@@ -1,211 +1,168 @@
-.header { 
-    background: radial-gradient(#F2B9A1, #EA6264);
-    display: flex;
-    height: 100px;
-    justify-content: space-between;
-    left: 0;
-    margin: 0;
-    padding: 30px 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
+
+header .inner {
+  position: fixed;
+  width: 100%;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  height: 70px;
+  background: radial-gradient(#F2B9A1, #EA6264);
+  z-index: 10;
 }
-.header-left{
-    margin-left: 120px;
+.header-right{
+  grid-column: 1;
+  grid-row: 1;
+  margin-left: 80px;
+  margin-top: 20px;
+  font-size: 1.8em;
 }
-.header ul{
-    display: flex;
-    margin-right: 100px;
-    font-weight: bold;
+.header-nav{
+  grid-row: 1;
+   grid-column: 3;
+   margin-top: 20px;
+   margin-right: 100px;
 }
-.header-nav li:not(:last-child){
-    margin-right: 30px;
+.header-nav ul{
+  display: flex;
+  flex-wrap: wrap;
+}
+.header-nav li{
+  display: flex;
+}
+.header-nav li:nth-child(1){
+  margin-right: 30px;
 }
 .header-nav a{
-    position: relative;
-    color: black;
-}
-.header-nav {
-  position: relative;
-  text-decoration: none;
-}
-.header-nav a::after {
-  position: absolute;
-  content: '';
-  top:23px;
-  left: 0;
-  width: 0;  
-  height: 3px;
-  background: #e81919;
-  transition: all 0.3s ease 0s;
-}
-.header-nav a:hover {
-  cursor: pointer;
-}
-.header-nav a:hover::after {
-  width: 100%;
-}
-#mainimage img{
-    position: relative;
-    top: 80px;
-    left: 0px;
-}
-.mainimage-txt{
-    position: relative;
-    top: -250px;
-    left: 370px;
+  color: black;
 }
 #mainimage h1{
-  font-size: 3em;
-  color: rgb(21, 255, 0);
-}
-#japan .inner{
-  height: 1100px;
-}
-#japan h2{
-color: #333333;
-font-size: 5.0em;
-font-weight: bold;
-text-align: center;
-position: relative;
-top: 100px;
-}
-#japan img{
   position: relative;
-  top: 10px;
-  left: 130px;
+  top: -370px;
+  margin-left: 350px;
+  font-size: 3.5vw;
+  color: red;
 }
-#japan .title-line{
-  width: 430px;
+#mainimage img{
+  object-fit: cover;
+}
+#japan, #foreign{
+  padding-top:70px;
+  margin-top:-70px;
+}
+.japan-title, .foreign-title{
+  text-align: center;
+  font-size: 4em;
+  margin-top: 100px;
+}
+.title-line{
   height: 5px;
+  width: 350px;
   background-color: #3f51b5;
-  margin: 100px auto 68.57px auto;
+  margin:  10px auto 68.57px auto;
 }
 
-#foreign h2{
-  color: #333333;
-  font-size: 5.0em;
-  font-weight: bold;
-  text-align: center;
-  position: relative;
-  top: 100px;
-  }
-  #foreign img{
-    position: relative;
-    top: 10px;
-    left: 130px;
-  }
-  #foreign .title-line{
-    width: 430px;
-    height: 5px;
-    background-color: #3f51b5;
-    margin: 100px auto 68.57px auto;
-  }
- 
-  #footer{
-    position: relative;
-    top: 250px;
-    height: 120px;
-    background-color: #333333;
-}
-#footer .svg-inline--fa{
-  position: relative;
-  width: 40px;
-  height: 40px;
-  left: 1210px;
-  top: 10px;
- 
-}
-.list-inline-item{
-  position: relative;
-  left: -650px;
-  top: 20px;
-}
-.list-inline-item:not(:last-child){
-  margin-right: 100px;
-}
-#footer .svg-inline--fa:hover{
-  color: #fff;
-}
-#page_top{
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  right: 2px;
-  bottom: 2px;
-  background: rgb(255, 115, 0);
-  opacity: 0.6;
-  border-radius: 50%;
-  }
-#page_top a{
-  position: relative;
-  display: block;
-  width: 50px;
-  height: 50px;
-  text-decoration: none;
-}
-#page_top a::before{
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f062';
-  font-size: 25px;
-  color: #fff;
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  top: -10px;
-  bottom: 0;
-  right: 0px;
-  left: 0;
-  margin: auto;
-  text-align: center;
-}
-.container {
-  font-family: "Yu Gothic", YuGothic, Verdana, 'Hiragino Kaku Gothic ProN','Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', 'メイリオ', Meiryo, sans-serif;
-  text-align: center;
-  padding-top: 40px;
-}
-.btn-open {
-  display: inline-block;
+.button{
+  padding: 20px;
   width: 250px;
-  height:60px;
+  background-color: red;
+  margin: 70px auto 30px auto;
   text-align: center;
-  background-color: #9ec34b;
-  font-size: 25px;
-  line-height: 52px;
-  color: #FFF;
-  text-decoration: none;
+  cursor: pointer;
+}
+.button a{
   font-weight: bold;
-  border: 2px solid #9ec34b;
+  font-size: 2em;
+  color: white;
+}
+#foreign img, #japan img{
+  object-fit: cover;
+}
+
+footer{
+  background-color: rgb(71, 68, 68);
+  height: 100px;
+  display: flex;
+  margin-top: 100px;
+}
+.twitter i, .facebook i{
+  color: blue;
   position: relative;
-  overflow: hidden;
-  z-index: 1;
-  top: 430PX;
-  left: -500PX;
+  top: 30px;
+  left: 570px;
 }
-.btn-open:after{
-  width: 100%;
-  height: 0;
-  content:"";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background : #FFF;
-  opacity: 0;
-  transform: translateX(-50%) translateY(-50%) rotate(45deg);
-  transition: .2s;
-  z-index: -1;
+footer i:nth-child(1){
+  margin-right: 50px;
 }
-.btn-open:hover{
-  color: #9ec34b;
+.top-page i{
+  position: fixed;
+  top: 635px;
+  left: 1210px;
+  color: white;
+  background-color: #3f5;
+  padding: 5px;
 }
-.btn-open:hover:after{
-  height: 240%;
-  opacity: 1;
+
+@media screen and (min-width:320px) and (max-width:768px){
+  header .inner{
+    position:fixed
+  }
+  .header-right{
+    width:11vw
+  }
+  .header-right h3{
+    font-size:0.55em;
+    margin-left:-15vw
+  }
+  .header-nav li:nth-child(1){
+    margin-right:3vw
+  }
+  .header-nav li{
+    font-size:0.9em
+  }
+  .header-nav ul{
+    margin-right:-20vw;
+  }
+  #mainimage img{
+    height: 85vh;
+  }
+  #mainimage h1{
+    position: absolute;
+    top: 80vw;
+    left: -85vw;
+    font-size: 7.0vw;
+  }
+  .twitter i, .facebook i{
+    position:relative;
+    left:35vw;
+  }
+  .top-page i{
+    position: fixed;
+    top: 153vw;
+    left: 88vw;
+    padding: 0.5vw;
+  }
+  .japan-title, .foreign-title{
+    margin-top: 50vw;
+    font-size: 2em;
+  }
+  .title-line{
+    height: 0.4vh;
+    width: 45vw;
+  }
+  .button{
+    padding:3vw;
+    width:40vw;
+  }
+  .button a{
+    font-size:5vw
+  }
+  footer{
+    height:34vh;
+  }
+  #japan, #foreign{
+    padding-top:1vw;
+    margin-top:1vw;
+  }
 }
-.btn-open:active:after{
-  height: 340%;
-  opacity: 1;
-}
+
 
